--- a/mystyle.css
+++ b/mystyle.css
@@ -32,7 +32,8 @@ body, html {
 .bottomleft {
   position: absolute;
   bottom: 0;
-  left: 16px; 
+  left: 16px;
+ z-index:2;  
 }
 
 .bottomright {
@@ -100,7 +101,7 @@ hr {
   width: 26px;
   height: 26px;
   cursor: pointer;
-  z-index: 1;
+  z-index: 2;
 }
 .menu__btn > span,
 .menu__btn > span::before,
@@ -128,12 +129,13 @@ hr {
   width: 300px;
   height: 100%;
   margin: 0;
-  padding: 80px 0;
+  padding: 50px 0 10px 0;
   list-style: none;
-  background-color: rgba(255,255,255,0.3);
+  background-color: rgba(150,150,150, .9);
   box-shadow: 2px 2px 6px rgba(0, 0, 0, .4);
   transition-duration: .4s;
   border-radius: 2px;
+  z-index:1;
 }
 .menu__item {
   display: block;
